# Role-Validator-XML-to-PDF-Job-Role-Comparison-Tool

./: .gitignore  LICENSE  gemini.py  main.py  pyproject.toml  readme.md  requirements.txt
config/: config.py
src/: gemini_client.py  pinecone_client.py
